--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>2048</title>
   <link rel="stylesheet" href="style.css">
+	<script type="module" src="script.js"></script>
 </head>
 <body>
 
